--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
-<html>
-<body>
-<table>
-<script> 
-for(var i=1;i<=9;i++){
-    document.write('<tr>');
-    for(var j=1;j<=9;j++){
-    document.write('<td>');
-    document.write(i+'x'+j+'='+i*j);
-    document.write('<td>');
-    }
-    document.write('<tr>');
- }
- </script>
- </table>
- </body>
- </html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
+<html xmlns="http://www.w3.org/1999/xhtml">  
+<head>  
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />  
+<title>九九乘法表</title>  
+  
+<style type="text/css">  
+table{  
+    width:600px;  
+    border-collapse:collapse;  
+    }  
+table th{  
+    border:#CC0000 1px solid  
+    }  
+</style>  
+</head>  
+<body>  
+  
+<script type="text/javascript">  
+//用表格形式显示一个九九乘法表  
+  
+document.write("<table>");  
+  
+for (var x = 1; x <= 9; x++)  
+{  
+    document.write("<tr>");  
+    for (var y = 1; y <= x; y++)  
+    {  
+        document.write("<th>"+y+"*"+x+"="+y*x+"</th>");  
+    }  
+    document.write("</tr>");  
+}  
+document.write("</table>");  
+  
+</script>  
+</body>  
+</html>  
