--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
-<html xmlns="http://www.w3.org/1999/xhtml">  
-<head>  
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />  
-<title>九九乘法表</title>  
-  
+<html>  
+<head>    
 <style type="text/css">  
 table{  
     width:600px;  
@@ -14,13 +10,9 @@ table th{
     }  
 </style>  
 </head>  
-<body>  
-  
-<script type="text/javascript">  
-//用表格形式显示一个九九乘法表  
-  
-document.write("<table>");  
-  
+<body>    
+<script type="text/javascript">   
+document.write("<table>");   
 for (var x = 1; x <= 9; x++)  
 {  
     document.write("<tr>");  
